--- a/pom.xml
+++ b/pom.xml
@@ -15,9 +15,14 @@
             <version>1.0.0</version>
         </dependency>
         <dependency>
-            <groupId>com.appriss.vineserv</groupId>
-            <artifactId>vineserv-enum-service</artifactId>
-            <version>0.9.0-local-SNAPSHOT</version>
+            <groupId>com.google.guava</groupId>
+            <artifactId>guava</artifactId>
+            <version>18.0</version>
+        </dependency>
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.12</version>
             <scope>test</scope>
         </dependency>
     </dependencies>
