--- a/pom.xml
+++ b/pom.xml
@@ -8,11 +8,23 @@
     <artifactId>modelmappertester</artifactId>
     <version>1.0-SNAPSHOT</version>
 
+    <repositories>
+        <repository>
+            <id>jitpack.io</id>
+            <url>https://jitpack.io</url>
+        </repository>
+    </repositories>
+
     <dependencies>
+        <!--<dependency>-->
+            <!--<groupId>org.modelmapper</groupId>-->
+            <!--<artifactId>modelmapper</artifactId>-->
+            <!--<version>1.0.0</version>-->
+        <!--</dependency>-->
         <dependency>
-            <groupId>org.modelmapper</groupId>
+            <groupId>com.github.modelmapper</groupId>
             <artifactId>modelmapper</artifactId>
-            <version>1.0.0</version>
+            <version>master-SNAPSHOT</version>
         </dependency>
         <dependency>
             <groupId>com.google.guava</groupId>
